--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Web Calculator</title>
+        <title>Create By Faizir Rohman</title>
         <link rel="stylesheet" href="assets/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -11,10 +11,16 @@
                 <h1 id="displayNumber">0</h1>
             </div>
             <div class="flex-container-row">
+                <div class="button clear negative">DEL</div>
+                <div class="button negative">+/-</div>
+                <div class="button operator">%</div>
+                <div class="button operator">/</div>
+            </div>
+            <div class="flex-container-row">
                 <div class="button">7</div>
                 <div class="button">8</div>
                 <div class="button">9</div>
-                <div class="button negative">+/-</div>
+                <div class="button operator">*</div>
             </div>
             <div class="flex-container-row">
                 <div class="button">4</div>
@@ -29,14 +35,14 @@
                 <div class="button operator">+</div>
             </div>
             <div class="flex-container-row">
-                <div class="button clear">CE</div>
+                <div class="button clear">AC</div>
                 <div class="button">0</div>
                 <div class="button equals double">=</div>
             </div>
         </div>
 
         <div class="history card">
-            <h2>Riwayat Perhitungan</h2>
+            <h2>History Perhitungan</h2>
             <table>
                 <thead>
                     <tr>
